--- a/booksell/templates/booksell/home.html
+++ b/booksell/templates/booksell/home.html
@@ -47,8 +47,8 @@
               <div class="mask rgba-black-light"></div>
             </div>
             <div class="carousel-caption">
-              <h3 class="h3-responsive">Light mask</h3>
-              <p>First text</p>
+              <h3 class="h3-responsive">Reading  is the way  to success </h3>
+              <p>William</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -59,8 +59,8 @@
               <div class="mask rgba-black-strong"></div>
             </div>
             <div class="carousel-caption">
-              <h3 class="h3-responsive">Strong mask</h3>
-              <p>Secondary text</p>
+              <h3 class="h3-responsive"> Reading books is Power</h3>
+              <p>Robert</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -71,8 +71,8 @@
               <div class="mask rgba-black-slight"></div>
             </div>
             <div class="carousel-caption">
-              <h3 class="h3-responsive">Slight mask</h3>
-              <p>Third text</p>
+              <h3 class="h3-responsive">Reading boostrong ks is makes you </h3>
+              <p>Rose</p>
             </div>
           </div>
         </div>
@@ -232,8 +232,8 @@
       <div class="row">
   
         <div class="col-md-6 mt-md-0 mt-3">
-          <h5 class="text-uppercase">Footer Content</h5>
-          <p>Here you can use rows and columns to organize your footer content.</p>
+          <h5 class="text-uppercase">Eribooks</h5>
+          <p>Here some facts abouts .</p>
   
         </div>
   
@@ -243,16 +243,16 @@
   
           <ul class="list-unstyled">
             <li>
-              <a href="#!">Link 1</a>
+              <a href="#!">Contact </a>
             </li>
             <li>
-              <a href="#!">Link 2</a>
+              <a href="#!">Facebook</a>
             </li>
             <li>
-              <a href="#!">Link 3</a>
+              <a href="#!">Instagram</a>
             </li>
             <li>
-              <a href="#!">Link 4</a>
+              <a href="#!">LinkeIn</a>
             </li>
           </ul>
   
