--- a/booksell/templates/booksell/navbar.html
+++ b/booksell/templates/booksell/navbar.html
@@ -16,10 +16,10 @@
         <a class="navbar-brand" href="{% url 'signup' %}">Sign-up</a>
         
       </div>
-   <!-- Search form -->
+   
    <form class="form-inline ml-auto">
       <div class="md-form my-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" action="{% url 'search_results' %}">
       </div>
     </form>
   
