--- a/booksell/templates/booksell/base.html
+++ b/booksell/templates/booksell/base.html
@@ -9,9 +9,9 @@
     <title> Eribook 3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="spectre.min.css">
+    <!-- <link rel="stylesheet" href="spectre.min.css">
 <link rel="stylesheet" href="spectre-exp.min.css">
-<link rel="stylesheet" href="spectre-icons.min.css">
+<link rel="stylesheet" href="spectre-icons.min.css"> -->
 
     <script src="js/jquery--3.1.1.min.js"></script>
     <script src="js/script.js">   </script>
@@ -54,9 +54,9 @@
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
 
-<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+<!-- <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
 <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
-<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css"> -->
 
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -66,7 +66,9 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
-
-
+<!-- 
+<link rel="stylesheet" href="spectre.min.css">
+<link rel="stylesheet" href="spectre-exp.min.css">
+<link rel="stylesheet" href="spectre-icons.min.css"> -->
 </body>
-</html>
+</html> 
