--- a/booksell/templates/booksell/details.html
+++ b/booksell/templates/booksell/details.html
@@ -34,7 +34,7 @@
   <div class="container">
     <h2>Why Eri-Book?</h2>
   </div>
-
+<!-- 
 <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
        
         <ol class="carousel-indicators">
@@ -90,7 +90,7 @@
           <span class="sr-only">Next</span>
         </a>
       
-      </div>
+      </div> -->
       
       <hr>
  <div class="container">
@@ -104,7 +104,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
     
-        <div class="collapse navbar-collapse" id="basicExampleNav">
+        <!-- <div class="collapse navbar-collapse" id="basicExampleNav">
         
           <ul class="navbar-nav mr-auto">
        
@@ -125,7 +125,7 @@
               <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
             </div>
           </form>
-        </div>
+        </div> -->
   
       </nav>
   
@@ -145,7 +145,7 @@
               {% for books in model %}
               
                   <div class="col-md-3">               
-                      <a href=""> <img src="{{books.image.url}}" class="card-img-top"  width=150px height=150px>  </a>
+                      <a href="{% url 'details' %}"> <img src="{{books.image.url}}" class="card-img-top"  width=350px height=350px>  </a>
                       <!-- <h5>{{books.title_book }}</h5>
                             <h5> {{books.author_book}}</h5> -->
                     
