--- a/booksell/templates/booksell/navbar.html
+++ b/booksell/templates/booksell/navbar.html
@@ -5,23 +5,31 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="spectre.min.css">
+  <link rel="stylesheet" href="spectre-exp.min.css">
+  <link rel="stylesheet" href="spectre-icons.min.css">
 </head>
 <body>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
  
-    <div class="topnav-right" style="float:right">
+    <div class="topnav-left">
         <a class="navbar-brand" href="{% url 'home' %}">Home</a>
         <a class="navbar-brand" href="{% url 'about' %}">About</a>
         <a class="navbar-brand" href="{% url 'signup' %}">Sign-up</a>
-        
+        <a class ="navbar-brand" href=""> <i class="fa fa-shopping-cart" style="font-size:48px;color:red ; text-align: right;"></i> </a>
+
       </div>
    
-   <form class="form-inline ml-auto">
+   <!-- <form class="form-inline ml-auto">
       <div class="md-form my-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" action="{% url 'search_results' %}">
       </div>
-    </form>
+    </form> -->
   
   
  
