--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,27 +15,17 @@ h5{
 h6{
 text-align: center;
 }
-/* .button {
-    border: none;
-    outline: 0;
-    padding: 12px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
+#wrapper {
     width: 100%;
-    font-size: 18px;
-  } */
+    height: 400px;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   
-  /* .button:hover {
-    opacity: 0.7;
-  } */
-  .empty-action {
-      text-align: center;
-      float: left;
-
+  button {
+    height: 20px;
+    width: 100px;
   }
-  #button1{
-      float:center;
-      text-align: center;
-  }
+  
