--- a/booksell/templates/booksell/home.html
+++ b/booksell/templates/booksell/home.html
@@ -142,10 +142,12 @@
         <div class="container">
     
           <div class="row">
-              {% for books in model %}
+              {% for books in model.all %}
               
                   <div class="col-md-3">               
-                      <a href=""> <img src="{{books.image.url}}" class="card-img-top"  width=150px height=150px>  </a>
+                      <a  href="{% url 'detail' books.id %}">
+                          <img src="{{books.image.url}}" class="card-img-top"  width=150px height=150px>
+                        </a> 
                       <!-- <h5>{{books.title_book }}</h5>
                             <h5> {{books.author_book}}</h5> -->
                     
