--- a/booksell/templates/booksell/home.html
+++ b/booksell/templates/booksell/home.html
@@ -142,7 +142,7 @@
         <div class="container">
     
           <div class="row">
-              {% for books in model.all %}
+              {% for books in model %}
               
                   <div class="col-md-3">               
                       <a  href="{% url 'detail' books.id %}">
