this commit will add the image author

--- a/booksell/templates/booksell/detail.html
+++ b/booksell/templates/booksell/detail.html
@@ -49,14 +49,18 @@
           
                 <div class="row no-gutters">
                   <div class="col-md-5">
-                      <img src="{{books.image.url}}" class="card-img-top" width=500px  >
+                      <img src="{{books.image.url}}" class="card-img-top" width=500px>
+                      <h3 style="text-align: center;"> $ {{books.amount}}</h3>
+                      <h6><button type="button" class="btn btn-primary">Add Cart</button></h6>
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">{{books.author_book}}</h5><br>
+                      <h5 class="card-title">{{books.image_author}}</h5>
+
                       <h4>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</h4>
-                      <p class="card-text"> ${{books.amount}}</p>
-                      <h6><button type="button" class="btn btn-primary">Add Cart</button></h6>
+                      
+                      
                     </div>
                   </div>
                 </div>
@@ -79,15 +83,11 @@
                   </div>
                   <button type="submit" class="btn btn-primary">Submit</button>
           
-              </div>
-   
-                  
+              </div>     
 
             </div>
-              <hr>       <hr>
-              
-             
-
+              <hr>       <hr>    
+<!-- 
     <div class="row">
               
                 
@@ -109,7 +109,7 @@
   <hr>
   
             
-          </div>
+          </div> -->
         </div>
     </main>
    
