--- a/booksell/templates/booksell/home.html
+++ b/booksell/templates/booksell/home.html
@@ -28,10 +28,17 @@
 
 <body>
   {% include "booksell/navbar.html" %}
-  
+ 
   {% block content %}
-  
+
   <div class="container">
+      {% if messages %}
+      {% for message in messages %}
+       <div class="alert alert-{{message.tags}}">
+           {{ message }}
+       </div>
+      {%endfor%}
+    {% endif %}
     <h2>Why Eri-Book?</h2>
   </div>
 
