--- a/booksell/templates/booksell/navbar.html
+++ b/booksell/templates/booksell/navbar.html
@@ -20,20 +20,18 @@
     <div class="topnav-left">
         <a class="navbar-brand" href="{% url 'home' %}">Home</a>
         <a class="navbar-brand" href="{% url 'about' %}">About</a>
-        <a class="navbar-brand" href="{% url 'signup' %}">Sign-up</a>
+        <a class="navbar-brand" href="{% url 'register' %}">Sign-up</a>
+        <a class="navbar-brand" href="{% url 'register' %}">Login</a>
+  
+        <a class="navbar-brand" href="{% url 'register' %}">Tri</a>
+        
+        
         <a class ="navbar-brand" href=""> <i class="fa fa-shopping-cart" style="font-size:48px;color:red ; text-align: right;"></i> </a>
 
-      </div>
-   
-   <!-- <form class="form-inline ml-auto">
-      <div class="md-form my-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" action="{% url 'search_results' %}">
-      </div>
-    </form> -->
-  
-  
+    </div>
  
   </div>
 </nav>
+
 </body>
 </html>
